# docs/swagger.json
@@ -18,7 +18,7 @@
     "paths": {
         "/inner/chain-data-subscribe/{networkCode}/address-subscribe": {
             "post": {
-                "description": "Register an address scan subscription for callback processing",
+                "description": "Register a contract-address log subscription based on eth_getLogs for callback processing",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,7 +28,7 @@
                 "tags": [
                     "Subscription"
                 ],
-                "summary": "Subscribe address",
+                "summary": "Subscribe contract address logs",
                 "parameters": [
                     {
                         "type": "string",
@@ -38,7 +38,7 @@
                         "required": true
                     },
                     {
-                        "description": "Address subscription payload",
+                        "description": "Contract address subscription payload",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -65,7 +65,7 @@
         },
         "/inner/chain-data-subscribe/{networkCode}/address-subscribe-cancel": {
             "post": {
-                "description": "Update or stop an address scan subscription",
+                "description": "Update or stop a contract-address log subscription",
                 "consumes": [
                     "application/json"
                 ],
@@ -75,7 +75,7 @@
                 "tags": [
                     "Subscription"
                 ],
-                "summary": "Cancel address subscription",
+                "summary": "Cancel contract address log subscription",
                 "parameters": [
                     {
                         "type": "string",
@@ -85,7 +85,7 @@
                         "required": true
                     },
                     {
-                        "description": "Address subscription cancel payload",
+                        "description": "Contract address subscription cancel payload",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -1008,6 +1008,9 @@
         "models.TokenAddRequest": {
             "type": "object",
             "properties": {
+                "decimals": {
+                    "type": "integer"
+                },
                 "tokenAddress": {
                     "type": "string"
                 },
